--- a/src/Autodash.Core/UI/Views/ProjectDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/ProjectDetails.cshtml
@@ -12,7 +12,7 @@
 <div class="row text-right">
     <form enctype="application/x-www-form-urlencoded" action="/projects/delete" method="post" style="display:inline">
         <input type="hidden" name="id" value="@Model.Project.Id"/>
-        <button type="submit" id="btn-delete-project" class="btn btn-danger" href="/projects/@Model.Project.Id/suites/create"><span class="glyphicon glyphicon-minus-sign"></span> Delete Project</button>
+        <button type="submit" id="btn-delete-project" class="btn btn-danger" href="/projects/@Model.Project.Id/suites/create"><span class="glyphicon glyphicon-remove-sign"></span> Delete Project</button>
     </form>
     <a class="btn btn-primary" href="/projects/@Model.Project.Id/suites/create"><span class="glyphicon glyphicon-plus-sign"></span> Create Suite</a>
 </div>
@@ -29,10 +29,10 @@
                             @suite.Suite.Name
                         </a>
 
-                        <a href="#@suite.Suite.Id" class="panel-action">
+                        <a href="/suites/@suite.Suite.Id" class="panel-action">
                             <small><span class="glyphicon glyphicon-info-sign"></span>&nbsp;Details</small>
                         </a>
-                        <a href="/suites/@suite.Suite.Id" class="panel-action action-delete">
+                        <a href="#@suite.Suite.Id" class="panel-action action-delete">
                             <small><span class="glyphicon glyphicon-remove-sign"></span>&nbsp;Delete</small>
                         </a>
                     </h4>
@@ -49,7 +49,7 @@
                                             <td>@string.Join(", ", suite.Suite.Configuration.Browsers)</td>
                                         </tr>
                                         <tr>
-                                            <th>Test Tag Query</th>
+                                            <th>Test Tags Query</th>
                                             <td>@suite.Suite.Configuration.TestTagsQuery</td>
                                         </tr>
                                         <tr>
@@ -97,7 +97,7 @@
             });
 
             $("#btn-delete-project").on("click", function(e) {
-                if (!confirm("Are you sure you want to delete this project?\nAll testsuites and suite runs will be deleted as well.")) {
+                if (!confirm("Are you sure you want to delete this project?\nAll test suites and suite runs will be deleted as well.")) {
                     e.preventDefault();
                 }
             });
