--- a/src/Autodash.Core/UI/Views/_TestExplorer.cshtml
+++ b/src/Autodash.Core/UI/Views/_TestExplorer.cshtml
@@ -6,8 +6,8 @@
 <div id="test-explorer-container">
     <div class="form-inline">
         <label>Test Tags Query:</label> <input type="text" class="form-control" placeholder="Ex: P1 && (US || UK)" style="width: 300px" data-bind="value: query" />
-        <button class="btn btn-primary" data-bind="click: submitQuery">See Results</button>
-        <span class="text-danger" data-bind="text: error"></span>
+        <button class="btn btn-primary" data-bind="click: submitQuery">Filter</button>
+        <span class="text-danger" data-bind="text: error"></span> <a href="#" data-bind="click: showTreeMap">See Test Tags tree map</a>
     </div>
     <div data-bind="foreach: unitTestCollections">
         <h4><span data-bind="text: assemblyName"></span> <small data-bind="text: testRunnerName"></small></h4>
@@ -26,4 +26,37 @@
             </tbody>
         </table>
     </div>
+    
+    <div class="modal fade" id="test-tags-tree-map-modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Test Tags Tree Map</h4>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th>Test Tag</th>
+                                <th>Count</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody data-bind="foreach: tags">
+                            <tr>
+                                <td data-bind="text: tagName"></td>
+                                <td style="width:70px;" data-bind="text: count"></td>
+                                <td style="width:200px;" data-bind="visualizeTag: $data"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
