changes in execution

--- a/src/Autodash.Core/UI/Views/_Layout.cshtml
+++ b/src/Autodash.Core/UI/Views/_Layout.cshtml
@@ -40,6 +40,9 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/">Projects</a></li>
                 </ul>
+                <div class="col-sm-3 pull-right text-right hidden-xs hidden-sm">
+                    <img src="http://static.carnivalcloud.com/~/media/Images/Header2013/carnival-logo png.ashx" style="margin-top: 4px;" />
+                </div>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
