--- a/src/Autodash.Core/UI/Views/_SuiteRunHistory.cshtml
+++ b/src/Autodash.Core/UI/Views/_SuiteRunHistory.cshtml
@@ -23,7 +23,7 @@
                 <td>@run.DurationFriendly()</td>
                 <td>@Html.Raw(run.StatusColored())</td>
                 <td>@run.PassedFailed()</td>
-                <td><a href="/runs/@run.Id/report.html">View</a> | <a href="/runs/@run.Id/report.html">Download</a></td>
+                <td><a href="/runs/@run.Id/report">View</a> | <a href="/runs/@run.Id/report.html">Download</a></td>
             </tr>
         }
     </tbody>
