--- a/src/Autodash.Core/UI/Views/CreateSuite.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateSuite.cshtml
@@ -1,6 +1,8 @@
 ﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Autodash.Core.UI.Models.CreateSuiteVm>
 @{
     Layout = "_Layout.cshtml";
+
+    string parallelExecutionTooltip = "Parallel execution speeds up suite run execution. However, depending on the test it could bring unexpected results. Ex: if a test adds a product to the shopping cart of user 'A', and then tries to validate the shopping cart product count was incremented, it could potentially find that the product was incremented twice because of another browser excution incrementing the cart for user 'A'.";
 }
 
 <h1>New Test Suite</h1>
@@ -30,6 +32,17 @@
                 <label><input type="checkbox" name="Browsers" value="Firefox" />Firefox</label>&nbsp;
                 <label><input type="checkbox" name="Browsers" value="InternetExplorer" />IE</label>
             </div>
+        </div>
+
+        <div class="form-group">
+            <label for="EnableBrowserExecutionInParallel">
+                <input type="checkbox" name="EnableBrowserExecutionInParallel" @(Model.EnableBrowserExecutionInParallel ? "checked='checked'" : "") />
+                Enable parallel execution of tests in browsers
+            </label>
+            <p class="help-block">
+                By enabling parallel execution each test will be run simultaneously in all selected browsers.
+                <a href="#" data-toggle="popover" data-content="@parallelExecutionTooltip"><span class="glyphicon glyphicon-question-sign text-danger"></span></a>
+            </p>
         </div>
 
         <div class="form-group">
@@ -65,3 +78,11 @@
 
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
+
+@section scripts{
+    <script>
+        $(function () {
+            $('[data-toggle="popover"]').popover();
+        })
+    </script>
+}
