introducing cancellation token to be able to cancel a running suite

--- a/src/Autodash.Core/UI/Content/main.css
+++ b/src/Autodash.Core/UI/Content/main.css
@@ -247,3 +247,7 @@ a.thumbnail.active {
     position: relative;
     top: 3px;
 }
+.cancel-suite-run {
+    text-decoration: none !important;
+    color: #333;
+}
