--- a/src/Autodash.Core/UI/Views/ProjectDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/ProjectDetails.cshtml
@@ -84,6 +84,7 @@
 </div>
 
 @section scripts{
+    <script src="/assets/js/suite-runs.js"></script>
     <script>
         $(function() {
             $(".action-delete").on("click", function(e) {
