--- a/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
@@ -105,6 +105,7 @@
     <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
     <script src="/assets/js/test-explorer.js"></script>
     <script src="/assets/js/suite-details.js"></script>
+    <script src="/assets/js/suite-runs.js"></script>
     <script src="https://www.google.com/jsapi"></script>
     <script>
         // Load the Visualization API and the piechart package.
