--- a/src/Autodash.Core/UI/Views/SuiteRunDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteRunDetails.cshtml
@@ -15,6 +15,7 @@
         <strong>Started On:</strong> @Model.SuiteRun.StartedOn
         <strong>Duration:</strong> @Model.SuiteRun.Duration.ToString(@"hh\:mm\:ss")
     </p>
+    <p><strong>Status:</strong> @Model.SuiteRun.Result.Details</p>
     <p><strong>Test Tags Query:</strong> @(Model.SuiteRun.TestSuiteSnapshot.Configuration.TestTagsQuery ?? "None")</p>
 </div>
 
