simplifying selected tests tab and test explorer

--- a/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
@@ -107,6 +107,7 @@
 
 @section scripts{
     <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.debug.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.min.js"></script>
     <script src="/assets/js/test-explorer.js"></script>
     <script src="/assets/js/suite-details.js"></script>
     <script src="/assets/js/suite-runs.js"></script>
