remoing TestTagsQuery and using actual selected tests

--- a/src/Autodash.Core/UI/Views/_TestExplorer.cshtml
+++ b/src/Autodash.Core/UI/Views/_TestExplorer.cshtml
@@ -8,7 +8,7 @@
         <div class="col-md-9">
             <div class="form-inline">
                 <label>Test Tags Query:</label> <input type="text" class="form-control" placeholder="Ex: P1 AND (US OR UK)" style="width: 300px" data-bind="value: query" />
-                <button class="btn btn-primary" data-bind="click: submitQuery">Filter</button>
+                <button class="btn btn-primary" data-bind="click: submitQuery, css: {'disabled': queryInProgress}">Filter</button>
                 <span class="text-danger" data-bind="text: error"></span>
                 <a href="#" data-bind="click: showTreeMap">See Test Tags tree map</a>
             </div>
