--- a/src/Autodash.Core/UI/Views/_Layout.cshtml
+++ b/src/Autodash.Core/UI/Views/_Layout.cshtml
@@ -1,5 +1,7 @@
 ﻿@using System
 @using System.IO
+@using System.Linq
+@using Nancy
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<dynamic>
 <!DOCTYPE html>
 <html lang="en">
@@ -38,7 +40,8 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Projects</a></li>
+                    <li class="@(IsCurrentRoute(true, "projects", "suite", "run") ? "active" : "")"><a href="/">Projects</a></li>
+                    <li class="@(IsCurrentRoute(false, "grid") ? "active" : "")"><a href="/grid">Grid</a></li>
                 </ul>
                 <div class="col-sm-3 pull-right text-right hidden-xs hidden-sm">
                     <img src="http://static.carnivalcloud.com/~/media/Images/Header2013/carnival-logo png.ashx" style="margin-top: 4px;" />
@@ -59,3 +62,12 @@
     @RenderSection("scripts", false)
 </body>
 </html>
+
+@functions{
+    bool IsCurrentRoute(bool includeRoot, params string[] segments)
+    {
+        if (includeRoot && Request.Url.Path == "/")
+            return true;
+        return segments.Any(n => Request.Url.Path.Contains(n));
+    }
+}
