--- a/src/Autodash.Core/UI/Views/CreateSuite.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateSuite.cshtml
@@ -1,4 +1,5 @@
-﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Autodash.Core.UI.Models.CreateSuiteVm>
+﻿@using Autodash.Core
+@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Autodash.Core.UI.Models.CreateSuiteVm>
 @{
     Layout = "_Layout.cshtml";
 
@@ -28,10 +29,18 @@
         <div class="form-group">
             <label for="Browsers">Browsers</label>
             <div class="checkbox">
-                <label><input type="checkbox" name="Browsers" value="Chrome" checked />Chrome</label>&nbsp;
-                <label><input type="checkbox" name="Browsers" value="Firefox" />Firefox</label>&nbsp;
-                <label><input type="checkbox" name="Browsers" value="InternetExplorer" />IE</label>
+                <label><input type="checkbox" name="Browsers" value="@BrowserNames.SeleniumChrome" checked />@BrowserNames.UiChrome</label>&nbsp;
+                <label><input type="checkbox" name="Browsers" value="@BrowserNames.SeleniumFirefox" />@BrowserNames.UiFirefox</label>&nbsp;
+                <label><input type="checkbox" name="Browsers" value="@BrowserNames.SeleniumIe" />@BrowserNames.UiIe</label>
             </div>
+        </div>
+        
+        <div class="form-group">
+            <label for="SuiteName">Environment Url</label>
+            <input type="text" class="form-control" name="EnvironmentUrl" value="@Model.EnvironmentUrl" required maxlength="100" />
+            <p class="help-block">
+                Enter the root url. Ex: http://www4.syscarnival.com or http://uk4.syscarnival.com
+            </p>
         </div>
 
         <div class="form-group">
