--- a/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@using Autodash.Core.UI.Models
+﻿@using Autodash.Core
+@using Autodash.Core.UI.Models
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Autodash.Core.UI.Models.SuiteDetailsVm>
 @{
     Layout = "_Layout.cshtml";
@@ -42,10 +43,18 @@
                     <div class="form-group">
                         <label for="Browsers">Browsers</label>
                         <div class="checkbox">
-                            <label><input type="checkbox" name="Browsers" value="Chrome" @(Model.IsBrowserSelected("Chrome") ? "checked" : "") />Chrome</label>&nbsp;
-                            <label><input type="checkbox" name="Browsers" value="Firefox" @(Model.IsBrowserSelected("Firefox") ? "checked" : "") />Firefox</label>&nbsp;
-                            <label><input type="checkbox" name="Browsers" value="IE" @(Model.IsBrowserSelected("IE") ? "checked" : "") />IE</label>
+                            <label><input type="checkbox" name="Browsers" value="@BrowserNames.SeleniumChrome" @(Model.IsBrowserSelected(BrowserNames.SeleniumChrome) ? "checked" : "") />@BrowserNames.UiChrome</label>&nbsp;
+                            <label><input type="checkbox" name="Browsers" value="@BrowserNames.SeleniumFirefox" @(Model.IsBrowserSelected(BrowserNames.SeleniumFirefox) ? "checked" : "") />@BrowserNames.UiFirefox</label>&nbsp;
+                            <label><input type="checkbox" name="Browsers" value="@BrowserNames.SeleniumIe" @(Model.IsBrowserSelected(BrowserNames.SeleniumIe) ? "checked" : "") />@BrowserNames.UiIe</label>
                         </div>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="SuiteName">Environment Url</label>
+                        <input type="text" class="form-control" name="EnvironmentUrl" value="@Model.Suite.Configuration.EnvironmentUrl" required maxlength="100" />
+                        <p class="help-block">
+                            Enter the root url. Ex: http://www4.syscarnival.com or http://uk4.syscarnival.com
+                        </p>
                     </div>
 
                     <div class="form-group">
