adding file explorer

--- a/src/Autodash.Core/UI/Views/CreateSuite.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateSuite.cshtml
@@ -2,8 +2,6 @@
 @inherits Nancy.ViewEngines.Razor.NancyRazorViewBase<Autodash.Core.UI.Models.CreateSuiteVm>
 @{
     Layout = "_Layout.cshtml";
-
-    string parallelExecutionTooltip = "Parallel execution speeds up suite run execution. However, depending on the test it could bring unexpected results. Ex: if a test adds a product to the shopping cart of user 'A', and then tries to validate the shopping cart product count was incremented, it could potentially find that the product was incremented twice because of another browser excution incrementing the cart for user 'A'.";
 }
 
 <h1>New Test Suite</h1>
@@ -39,21 +37,10 @@
             <label for="SuiteName">Environment Url</label>
             <input type="text" class="form-control" name="EnvironmentUrl" value="@Model.EnvironmentUrl" required maxlength="100" />
             <p class="help-block">
-                Enter the root url. Ex: http://www4.syscarnival.com or http://uk4.syscarnival.com
+                Enter the root url. Ex: http://www.some-url.com
             </p>
         </div>
-
-        <div class="form-group">
-            <label for="EnableBrowserExecutionInParallel">
-                <input type="checkbox" name="EnableBrowserExecutionInParallel" @(Model.EnableBrowserExecutionInParallel ? "checked='checked'" : "") />
-                Enable parallel execution of tests in browsers
-            </label>
-            <p class="help-block">
-                By enabling parallel execution each test will be run simultaneously in all selected browsers.
-                <a href="#" data-toggle="popover" data-content="@parallelExecutionTooltip"><span class="glyphicon glyphicon-question-sign text-danger"></span></a>
-            </p>
-        </div>
-
+        
         <div class="form-group">
             <label for="RetryAttempts">Retry attempts</label>
             <input type="number" class="form-control" name="RetryAttempts" value="@Model.RetryAttempts" required maxlength="1" />
