--- a/src/Autodash.Core/UI/Views/SuiteRunDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteRunDetails.cshtml
@@ -39,32 +39,32 @@
             {
                 <tr>
                     <td>@test.TestName</td>
-                    @foreach (var browser in test.BrowserResults.GroupBy(n => n.Browser).OrderBy(n => n.Key))
+                    @foreach (var browser in Model.GetBrowserResults(test))
                     {
-                        <td class="browser-result @(test[browser.Key].Passed ? "bg-success" : "bg-danger")">
-                            <span>@test[browser.Key].Duration.ToString("mm\\:ss")</span>
+                        <td class="browser-result @(browser.Passed ? "bg-success" : "bg-danger")">
+                            <span>@browser.Duration.ToString("mm\\:ss")</span>
                             <div class="hidden details">
                                 <table class="table table-condensed browser-result-details">
                                     <tbody>
                                         <tr>
                                             <th>Duration</th>
-                                            <td>@test[browser.Key].Duration.ToString("mm\\:ss\\.ff")</td>
+                                            <td>@browser.Duration.ToString("mm\\:ss\\.ff")</td>
                                         </tr>
                                         <tr>
                                             <th>Start Time</th>
-                                            <td>@test[browser.Key].StartTime.ToLongTimeString()</td>
+                                            <td>@browser.StartTime.ToLongTimeString()</td>
                                         </tr>
                                         <tr>
                                             <th>End Time</th>
-                                            <td>@test[browser.Key].EndTime.ToLongTimeString()</td>
+                                            <td>@browser.EndTime.ToLongTimeString()</td>
                                         </tr>
                                     </tbody>
                                 </table>
 
                                 <h4>Standard Output <small><a href="#output" class="glyphicon glyphicon-copy" title="Copy to clipboard"></a></small></h4>
-                                <pre id="output" style="max-height: 250px">@test[browser.Key].Stdout</pre>
+                                <pre id="output" style="max-height: 250px">@browser.Stdout</pre>
                                 <h4>Standard Error <small><a href="#error" class="glyphicon glyphicon-copy" title="Copy to clipboard"></a></small></h4>
-                                <pre id="error" style="max-height: 250px">@test[browser.Key].Stderr</pre>
+                                <pre id="error" style="max-height: 250px">@browser.Stderr</pre>
                             </div>
                         </td>
                     }
